<resources>
    <string name="app_name">CTCVS</string>

    <!-- main labels -->
    <string name="lbl_group_data">Grouped Data</string>
    <string name="lbl_ungroup_data">Ungrouped Data</string>

    <!-- group data -->
    <!-- labels -->
    <string name="mean">Mean</string>
    <string name="median">Median</string>
    <string name="mode">Mode</string>
    <string name="stdDev">Standard Deviation</string>
    <string name="var">Variance</string>
    <string name="cv">Coefficient of Variation</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="compare_cv">Compare Coefficient of Variation</string>
    <string name="cv_input_set2">Input CV for Set 2</string>
    <string name="hint_data_form">Extracted text from image. \n\nYou can input it yourself to compute the value.</string>
    <string name="hint_mean">Mean</string>
    <string name="hint_stdev">Standard deviation</string>
    <string name="hint_variance">Variance</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_compute">Compute</string>
    <string name="lbl_img">Image of capture data</string>

    <!-- group data forms -->
    <string name="input_info">
        <b>
            Please input you data below.\n\n
            \tMake sure to input it in a correct format or otherwise\n
            \tthe system cannot recognize your input.\n\n
        </b>
        <b>The format:</b>\n
        \t<b>X-Values:</b>\n
        \t\t<b>LCL1-UCL1, LCL2-UCL2, LCL3-UCL3, ...</b>\n
        \t\t(note that the system uses the format <b>\', \'</b> for each x values to recognize the input.)\n\n

        \t\t* There must be a comma followed by a single space <b>(, )</b> between each values of X and LCL, UCL are separated only by dash <b>(-)</b>.\n
        \t\t\t<b>Correct:</b> LCL1-UCL1 (for example: 0-9, 10-19, 20-29)\n
        \t\t\t<b>Incorrect:</b> LCL1 -UCL1,LCL2 - UCL2;LCL3- UCL3\n\n

        \t<b>Y-Values:</b>\n
        \t\t<b>f1, f2, f3, f4, ...</b>\n
        \t\t(note that the system uses the format <b>\', \'</b> y values to recognize the input)\n\n

        \t\t* There must only be a comma followed by a single space <b>(, )</b> between each values of Y.\n
        \t\t\t<b>Correct:</b> 1, 3, 2, 5\n
        \t\t\t<b>Incorrect:</b> 1,3;2 ,5\n\n
    </string>
    <string name="x_value_label"><b>X-Values:</b></string>
    <string name="x_value_hint">Example: 0–9, 2–8, 10–15, …</string>
    <string name="y_value_label"><b>Y-Values:</b></string>
    <string name="y_value_hint">Example: 1, 3, 2, …</string>

    <!-- ungroup data -->
    <!-- labels -->
    <string name="compute_mean">Mean: </string>
    <string name="compute_median">Median: </string>
    <string name="compute_mode">Mode: </string>
    <string name="compute_standard_deviation">Standard Deviation: </string>
    <string name="compute_variance">Variance: </string>

    <!-- MT & MV -->
    <string name="goto_mt">Measure of Central Tendency</string>
    <string name="goto_mv">Measure of Variation</string>
    <string name="error_cv_set_2_mean">Please input <i>Mean</i> for Set 2.</string>
    <string name="error_cv_set_2_stdev">Please input <i>Standard Deviation</i> for Set 2.</string>
    <string name="error_cv_set_2_variance">Please input <i>Variance</i> for Set 2.</string>

    <!-- exceptions -->
    <string name="exp_crop_function">Your phone does not have crop functionality. You have to install app that has crop functionality.</string>
    <string name="exp_input_empty">Please fill all of the forms.</string>
</resources>
