<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seladanghijau.centraltendencysnap.activity.GroupedData">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:text="Group Data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:text="@string/input_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#ff0000" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/x_value_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etXInput"
                android:hint="@string/x_value_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/y_value_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etYInput"
                android:hint="@string/y_value_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="Compute"
                android:id="@+id/btnCompute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>