<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/ivImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/lbl_img" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/etResult"
            android:hint="@string/hint_data_form"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textColorHint="@color/colorSecondary"
            android:textColor="@color/colorTertiary"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:text="@string/btn_upload"
                android:id="@+id/btnUpload"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_alignParentLeft="true"
                android:background="@drawable/state_button" />

            <Button
                android:text="@string/btn_capture"
                android:id="@+id/btnCapture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_alignParentRight="true"
                android:background="@drawable/state_button" />
        </RelativeLayout>

        <Button
            android:text="@string/btn_compute"
            android:id="@+id/btnCompute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/state_button" />
    </LinearLayout>
</RelativeLayout>
