<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seladanghijau.centraltendencysnap.activity.ComputeGroupDataMT">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/set_1"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/stdDev"
                android:id="@+id/tvStandardDeviationTitle"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvStandardDeviationStep"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#0000ff" />

            <TextView
                android:id="@+id/tvStandardDeviationAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:textColor="#FF0000" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvVarianceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/var"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvVarianceStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:textColor="#0000ff" />

            <TextView
                android:id="@+id/tvVarianceAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:textColor="#FF0000" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/cv"
                android:id="@+id/tvCVTitle"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCVStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="15dp"
                android:textColor="#0000ff" />

            <TextView
                android:id="@+id/tvCVAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:textColor="#FF0000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/btnSet2"
                android:text="@string/set_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/state_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
